--- a/Back end/package.json
+++ b/Back end/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.5"
